--- a/03-Minimize_Microservice_Vulnerabilities/01-Security_Contexts/pod-securitycontext.yaml
+++ b/03-Minimize_Microservice_Vulnerabilities/01-Security_Contexts/pod-securitycontext.yaml
@@ -19,7 +19,7 @@ metadata:
   name: security-context-demo
 spec:
   securityContext:
-    runAsUser: root
+    runAsUser: 0
     runAsGroup: 3000
     fsGroup: 2000
   volumes:
